<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    >

    <android.support.design.widget.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/detail_backdrop_height"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        android:fitsSystemWindows="true">

        <android.support.design.widget.CollapsingToolbarLayout
            android:id="@+id/collapsing_toolbar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fitsSystemWindows="true"
            app:layout_scrollFlags="scroll|exitUntilCollapsed"
            app:contentScrim="@color/brand_main"
            app:expandedTitleMarginStart="@dimen/title_margin_start"
            app:expandedTitleMarginEnd="@dimen/title_margin_end"
            >

            <ImageView
                android:id="@+id/backdrop"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="centerCrop"
                android:fitsSystemWindows="true"
                app:layout_collapseMode="parallax"
                />

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
                app:layout_collapseMode="pin"
                />

        </android.support.design.widget.CollapsingToolbarLayout>

    </android.support.design.widget.AppBarLayout>

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/header_padding">

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/card_margin"
                >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginTop="@dimen/padding_small"
                    android:weightSum="3"
                    style="@style/Widget.CardContent"
                    >

                    <ImageView
                        android:id="@+id/movie_poster"
                        android:layout_width="0dp"
                        android:layout_height="150dp"
                        android:layout_weight="1"
                        android:scaleType="centerCrop"
                        android:paddingLeft="@dimen/padding_medium"
                        />

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="2"
                        android:orientation="vertical"
                        android:padding="@dimen/padding_small"
                        >

                        <TextView
                            android:id="@+id/movie_year"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            tools:text="@string/movie_year"
                            />

                        <TextView
                            android:id="@+id/movie_duration"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            tools:text="@string/movie_duration"
                            />

                        <TextView
                            android:id="@+id/movie_rating"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            tools:text="@string/movie_rating"
                            />

                        <Button
                            android:id="@+id/mark_as_favorite"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/mark_as_favorite"
                            android:textAllCaps="true"
                            android:gravity="center"
                            />

                    </LinearLayout>

                </LinearLayout>


            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/card_margin"
                >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    style="@style/Widget.CardContent"
                    >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/trailers"
                        android:textAppearance="@style/TextAppearance.AppCompat.Title"
                        />

                    <android.support.v7.widget.RecyclerView
                        android:id="@+id/trailer_list"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:scrollbars="none"
                        />

                </LinearLayout>

            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/card_margin"
                >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/Widget.CardContent"
                    android:orientation="vertical"
                    >

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/summary"
                        android:textAppearance="@style/TextAppearance.AppCompat.Title"
                        />

                    <TextView
                        android:id="@+id/movie_summary"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        tools:text="@string/movie_summary"
                        android:padding="@dimen/padding_small"
                        android:ellipsize="end"
                        />


                </LinearLayout>

            </android.support.v7.widget.CardView>

            <!-- Horizontal line -->
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@android:color/darker_gray" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/comment"
                android:padding="@dimen/padding_small"
                />

            <ListView
                android:id="@+id/comment_list"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:nestedScrollingEnabled="true"
                />


        </LinearLayout>

    </android.support.v4.widget.NestedScrollView>
    <android.support.design.widget.FloatingActionButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@android:drawable/btn_star_big_off"
        app:layout_anchor="@id/appbar"
        app:layout_anchorGravity="bottom|right|end"
        android:layout_margin="@dimen/fab_margin"
        android:clickable="true"
        />

</android.support.design.widget.CoordinatorLayout>